# Operating-Systems-labs

./: .gitignore  README.md
2. Межпроцессное взаимодействие/: lab2.md
Akhmetshin.Raul/lab1/: build.sh  config.txt  daemon.cpp  daemon.hpp  main.cpp
Baev.Daniil/lab1/: CMakeLists.txt  config.txt  daemon.cpp  daemon.hpp  lab1_daemon  main.cpp
Baev.Daniil/lab2/src/: CMakeLists.txt  build.sh
Baev.Daniil/lab2/src/client/: client.cpp  client.h
Baev.Daniil/lab2/src/connection/: conn_fifo.cpp  conn_pipe.cpp  conn_shm.cpp  connection.h
Baev.Daniil/lab2/src/gui/: MainWindow.ui  gui.cpp  gui.h  model.hpp
Baev.Daniil/lab2/src/host/: clientHandler.cpp  clientHandler.h  host.cpp  host.h
Baev.Daniil/lab2/src/utils/: threadsafe_vector.hpp
Chevykalov.Grigory/lab1/: CMakeLists.txt  build.sh  config.txt  daemon.cpp  daemon.h  main.cpp
Chevykalov.Grigory/lab2/: CMakeLists.txt  build.sh
Chevykalov.Grigory/lab2/client/: client.cpp  client.h
Chevykalov.Grigory/lab2/connection/: conn_fifo.cpp  conn_fifo.h  conn_seg.cpp  conn_seg.h  conn_shm.cpp  conn_shm.h  connection.h
Chevykalov.Grigory/lab2/gui/: MainWindow.ui  gui.cpp  gui.h  ui_MainWindow.h
Chevykalov.Grigory/lab2/host/: host.cpp  host.h
Faizrahmanov.Artur/lab1/: CMakeLists.txt  Config.cpp  Config.h  FileMoverDaemon.cpp  FileMoverDaemon.h  build.sh  config.txt  main.cpp
Faizrahmanov.Artur/lab2/: CMakeLists.txt  build.sh  host_fifo  host_mq  host_sock
Faizrahmanov.Artur/lab2/connections/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h
Faizrahmanov.Artur/lab2/goat/: goat.cpp  goat.h
Faizrahmanov.Artur/lab2/gui/: gui.cpp  gui.h  main.qml
Faizrahmanov.Artur/lab2/utils/: configuration.h  message.h
Faizrahmanov.Artur/lab2/wolf/: host.cpp  wolf.cpp  wolf.h
Fisyuk.Aleksey/lab1/: config.txt  main.cpp
Fisyuk.Aleksey/lab1/daemon/: Daemon.cpp  Daemon.hpp  Parser.cpp  Parser.hpp
Gabdushev.Rushan/lab1/: CMakeLists.txt  build.sh  config.txt  daemon.cpp  daemon.hpp  main.cpp
Gabdushev.Rushan/lab2/: CMakeLists.txt  build.sh
Gabdushev.Rushan/lab2/client/: client.cpp  client.h
Gabdushev.Rushan/lab2/connections/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_pipe.cpp  conn_pipe.h  conn_sock.cpp  conn_sock.h
Gabdushev.Rushan/lab2/host/: client_handler.cpp  client_handler.h  host.cpp  host.h  shared_game_state.h
Gabdushev.Rushan/lab2/host/wolf_window/: gui_form.ui  gui_window.cpp  gui_window.h
Gabdushev.Rushan/lab2/utils/: config.h  goat_info.h  message.h  safe_queue.h
Geoffrey.Gerock/lab1/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Daemon.cpp  Daemon.h  Deleter.cpp  Deleter.h  build.sh  conf  main.cpp  utils.cpp  utils.h
Khripunkov.Dmitry/lab1/: build.sh  config.txt
Khripunkov.Dmitry/lab1/include/: config.hpp  daemon.hpp
Khripunkov.Dmitry/lab1/src/: daemon.cpp  main.cpp
Kozhevnikova.Diana/lab1/: CMakeLists.txt  build.sh  config.txt  main.cpp
Kozhevnikova.Diana/lab1/config/: config.cpp  config.h
Kozhevnikova.Diana/lab1/daemon/: daemon.cpp  daemon.h
Mordovin.Nikolay/lab1/: CMakeLists.txt  build.sh  config.txt  daemon.cpp  daemon.h  main.cpp
Parusov.Vladimir/lab1/: CMakeLists.txt  build.sh  config.txt  daemon.cpp  daemon.h  lab1  main.cpp
Parusov.Vladimir/lab2/: CMakeLists.txt  build.sh  safe_queue.h
Parusov.Vladimir/lab2/client/: client.cpp  client.h
Parusov.Vladimir/lab2/connections/: conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_seg.cpp  conn_seg.h  conn_sock.cpp  conn_sock.h  connection.h
Parusov.Vladimir/lab2/gui/: MainWindow.h  gui.cpp  gui.h  mainwindow.ui
Parusov.Vladimir/lab2/host/: host.cpp  host.h
Pavlov.Ilia/lab1/: CMakeLists.txt  build.sh
Pavlov.Ilia/lab1/resources/: config_example.txt
Pavlov.Ilia/lab1/src/: main.cpp
Pavlov.Ilia/lab1/src/daemon/: daemon.cpp  daemon.h
Pavlov.Ilia/lab2/: CMakeLists.txt  build.sh
Pavlov.Ilia/lab2/src/: state.h
Pavlov.Ilia/lab2/src/client/: client.cpp  client.h
Pavlov.Ilia/lab3/: CMakeLists.txt  build.sh  config.txt
Pavlov.Ilia/lab3/src/: main.cpp  tester.hpp
Pavlov.Ilia/lab3/src/set/: set.h  set_coarse.hpp  set_fine.hpp
Popov.Ivan/lab1/: CMakeLists.txt  build.sh  config.cpp  config.h  config.txt  daemon.cpp  daemon.h  main.cpp
Sachuk.Alex/lab1/: .gitignore  CMakeLists.txt  build.sh  conf.txt  lab1_10  main.cpp
Sachuk.Alex/lab1/ConfigReader/: abstractConfigDescription.h  configDescription.h  configReader.cpp  configReader.h
Sachuk.Alex/lab1/Daemon/: daemon.cpp  daemon.h
Sachuk.Alex/lab1/Logger/: logger.cpp  logger.h
Sachuk.Alex/lab2/: CMakeLists.txt  host_fifo  host_mq  host_seg
Sachuk.Alex/lab2/client/: client.cpp  client.h
Sachuk.Alex/lab2/connections/: abstr_conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_seg.cpp  conn_seg.h
Sachuk.Alex/lab2/host/: _host.cpp  host.cpp  host.h
Sachuk.Alex/lab2/messages/: messages.cpp  messages.h
Sachuk.Alex/lab2/window/: ChatWin.cpp  ChatWin.h  ChatWin.ui  ui_ChatWin.h  window.cpp  window.h
Vorotnikov.Andrey/lab1/: CMakeLists.txt  build.sh  main.cpp
Vorotnikov.Andrey/lab1/config/: config.cpp  config.h
Vorotnikov.Andrey/lab1/copier/: copier.cpp  copier.h
Vorotnikov.Andrey/lab1/daemon/: daemon.cpp  daemon.h
Vorotnikov.Andrey/lab1/data/: test.conf
Vorotnikov.Andrey/lab2/: CMakeLists.txt  build.sh
Vorotnikov.Andrey/lab2/client/lib/: CMakeLists.txt  client.h
Vorotnikov.Andrey/lab2/client/lib/src/: client.cpp
Vorotnikov.Andrey/lab2/client/src/: main.cpp
Vorotnikov.Andrey/lab2/connections/: CMakeLists.txt  conn.h  conn_fifo.h  conn_mq.h  conn_seg.h
Vorotnikov.Andrey/lab2/connections/src/: conn.cpp  conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp
Vorotnikov.Andrey/lab2/game_rules/: CMakeLists.txt  game_rules.h
Vorotnikov.Andrey/lab2/game_rules/src/: game_rules.cpp
Vorotnikov.Andrey/lab2/host/gui/: CMakeLists.txt  MainWindow.ui  gui.h
Vorotnikov.Andrey/lab2/host/gui/src/: gui.cpp
Vorotnikov.Andrey/lab2/host/lib/: CMakeLists.txt  host.h
Vorotnikov.Andrey/lab2/host/lib/src/: host.cpp
Vorotnikov.Andrey/lab2/host/src/: main.cpp
Vorotnikov.Andrey/lab2/utils/: raw.h
(+12 files in other folders)
